--- a/package.json
+++ b/package.json
@@ -6,20 +6,35 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
+    "body-parser": "1.19.0",
+    "concurrently": "^6.0.2",
+    "express": "4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "level": "6.0.1",
+    "nodemon": "^2.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-nl2br": "1.0.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.7",
     "vite": "^2.1.5"
   },
   "scripts": {
-    "start": "vite",
+    "client": "vite",
+    "server": "nodemon ./bin/server.js",
     "build": "vite build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test_server": "NODE_ENV=testing mocha 'test/**/*.js'",
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "dev": "concurrently -n 'client,server' \"yarn client\" \"yarn server\""
   },
   "eslintConfig": {
     "extends": "react-app"
