--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-nl2br": "1.0.2",
     "react-scripts": "3.4.3",
+    "sass": "^1.32.12",
     "uuid": "8.3.2"
   },
   "devDependencies": {
