--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "7.1.2",
     "body-parser": "1.19.0",
     "concurrently": "^6.0.2",
+    "cors": "^2.8.5",
     "express": "4.17.1",
+    "htm": "^3.0.4",
     "jsonwebtoken": "^8.5.1",
     "level": "6.0.1",
     "nodemon": "^2.0.7",
