--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
     "@testing-library/user-event": "7.1.2",
+    "bcrypt": "^5.0.1",
     "body-parser": "1.19.0",
     "concurrently": "^6.0.2",
     "cors": "^2.8.5",
