--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint \"./**/*.{js,css,jsx}\"",
     "dev": "concurrently -n 'client,server' \"npm run client\" \"npm run server\"",
-    "start": "npm run dev"
+    "start": "npm run server"
   },
   "eslintConfig": {
     "extends": "react-app"
